[package]
name = "rustcrypto-group"
version = "0.14.0-pre.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
edition = "2021"
rust-version = "1.85"
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Elliptic curve group traits and utilities"
documentation = "https://docs.rs/rustcrypto-group/"
homepage = "https://github.com/RustCrypto/group"
repository = "https://github.com/RustCrypto/group"

[dependencies]
chacha20 = { version = "0.10.0-rc.10", optional = true, default-features = false, features = ["rng"] }
ff = { version = "0.14.0-rc.0", package = "rustcrypto-ff", default-features = false }
rand = { version = "0.10.0-rc.8", optional = true, default-features = false }
rand_core = { version = "0.10", default-features = false }
#rand_xorshift = { version = "0.5.0-rc.0", optional = true }
subtle = { version = "2.2.1", default-features = false }

# Crate for exposing the dynamic memory usage of the w-NAF structs.
memuse = { version = "0.2", optional = true }

[features]
default = ["alloc"]
alloc = []
tests = ["alloc", "chacha20", "rand"] # "rand_xorshift"]
wnaf-memuse = ["alloc", "memuse"]

[badges]
maintenance = { status = "actively-developed" }

[patch.crates-io.rand]
git = "https://github.com/rust-random/rand"
